Excise a lot of references to the tag model's short_name and long_name

--- a/test/fixtures/tags.yml
+++ b/test/fixtures/tags.yml
@@ -52,7 +52,7 @@ conversation_tag:
 
 warmups_tag:
   short_name: warm-up
-  long_name: Warm-ups
-  name: Warm-ups
+  long_name: Warm-up
+  name: Warm-up
   description: I, like my brothers, am here to help with tests
   tag_category: grammar_category
