--- a/test/fixtures/textbooks.yml
+++ b/test/fixtures/textbooks.yml
@@ -3,8 +3,10 @@
 textbook_one:
   name: Test Textbook One
   additional_info: I am a test textbook. I doubt I'll sell very well with this name.
+  year_published: 2019
 
 
 textbook_two:
   name: Text Textbook Two
   additional_info: I'm the second in the Test Textbook series. You probably bought me because a teacher made you buy it!
+  year_published: 2014
