Upgrade to Ruby 2.7 and change Docker base

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,11 @@
 .dockerignore
 .git
 logs/
-tmp/
+/log/
+/tmp/
+
+/storage/
+.elasticbeanstalk/
+.ebextensions/
+/lib/seeds/englipedia
+/yarn-error.log
