Add the basics of the TextbookPageLinks model

--- a/test/fixtures/textbook_pages.yml
+++ b/test/fixtures/textbook_pages.yml
@@ -6,3 +6,9 @@ textbook_page_one:
   textbook: textbook_one
   tag: basic_tag_one
 
+
+textbook_page_two:
+  page: 100
+  description: Well into the middle of this textbook.
+  textbook: textbook_two
+  tag: basic_tag_two
