--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
-    "@rails/webpacker": "5.4.0"
+    "@rails/webpacker": "5.4.0",
+    "promise-polyfill": "8.2.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
+    "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.2"
   }
 }
